Samurai Image View added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.example.assignmentlistview.ui.assignmentlistview.AssignmentList
+    <com.example.assignmentlistview.ui.list.AssignmentList
         android:id="@+id/assignment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
