isLoadingTimeLoggingEnabled added to SamuraiImageView

--- a/assignmentlistview/src/main/res/values/attr.xml
+++ b/assignmentlistview/src/main/res/values/attr.xml
@@ -2,6 +2,7 @@
 <resources>
     <!-- Samurai Image View-->
     <declare-styleable name="SamuraiImageView">
+        <attr name="isLoadingTimeLoggingEnabled" format="boolean" />
     </declare-styleable>
 
     <attr name="samuraiAssignmentListView" format="reference" />
